--- a/crates/brace-web-core/Cargo.toml
+++ b/crates/brace-web-core/Cargo.toml
@@ -8,6 +8,8 @@ license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [dependencies]
-actix-rt = "1.0"
 actix-web = "2.0"
 futures = "0.3"
+
+[dev-dependencies]
+actix-rt = "1.0"
