--- a/crates/brace-web-markup/Cargo.toml
+++ b/crates/brace-web-markup/Cargo.toml
@@ -12,6 +12,8 @@ brace-parser = { git = "https://github.com/brace-rs/brace-parser", rev = "c85faf
 brace-web-core = { path = "../brace-web-core" }
 futures = "0.3"
 indexmap = { version = "1.2", features = ["serde-1"] }
+once_cell = "1.4"
+regex = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
